[gd_scene load_steps=4 format=3 uid="uid://cpej8d282xgbs"]

[ext_resource type="Theme" uid="uid://cfel3mfyduqo3" path="res://Resource/def.tres" id="1_4rhud"]
[ext_resource type="Script" path="res://recipe_ui.gd" id="1_4upkp"]
[ext_resource type="PackedScene" uid="uid://bdnlkqtgbs0so" path="res://brik_ui.tscn" id="2_pbciu"]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 3
anchor_left = 0.406
anchor_top = 0.004
anchor_right = 0.58
anchor_bottom = 0.073
offset_left = -48.712
offset_top = -2.592
offset_right = 53.84
offset_bottom = 7.696
grow_horizontal = 2
theme = ExtResource("1_4rhud")
script = ExtResource("1_4upkp")
metadata/_edit_horizontal_guides_ = [1327.0]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.5
offset_top = -27.5
offset_right = 106.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Control2" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Control" parent="HBoxContainer/Control2" instance=ExtResource("2_pbciu")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 125.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]+"
scroll_active = false

[node name="Control3" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Control" parent="HBoxContainer/Control3" instance=ExtResource("2_pbciu")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 125.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)

[node name="RichTextLabel2" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]="
scroll_active = false

[node name="Control4" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Control" parent="HBoxContainer/Control4" instance=ExtResource("2_pbciu")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 125.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
